# cppnano

./: .cmake-format.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  uncrustify.cfg
.github/workflows/: ci.yaml
scripts/: uncrustify_fix.py
src/cppnano/: __init__.py  cli.py
tests/: test_sanity.py
